--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -81,11 +81,11 @@ $material-theme: mat-light-theme($material-theme-primary, $material-theme-accent
                 disabled-button: rgba(black, 0.12),
                 raised-button: map-get($pxb-white, 50),
                 focused-button: $dark-focused,
-                selected-button: map_get($mat-grey, 300),
-                selected-disabled-button: map_get($mat-grey, 400),
-                disabled-button-toggle: map_get($mat-grey, 200),
-                unselected-chip: map_get($mat-grey, 300),
-                disabled-list-option: map_get($mat-grey, 200),
+                selected-button: map-get($pxb-gray, 300),
+                selected-disabled-button: map-get($pxb-gray, 400),
+                disabled-button-toggle: map-get($pxb-gray, 200),
+                unselected-chip: map-get($pxb-gray, 300),
+                disabled-list-option: map-get($pxb-gray, 200),
             ),
         )
     );
