--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -301,4 +301,14 @@
         color: map-get($foreground, text);
         background-color: map-get($pxb-white, 200);
     }
+
+    /* User Menu */
+    .pxb-user-menu-overlay {
+        .pxb-drawer-header-content.mat-toolbar-single-row.mat-toolbar {
+            background-color: unset;
+        }
+        .pxb-info-list-item-content {
+            color: map-get($pxb-gray, 500);
+        }
+    }
 }
