Add 600 font weight to mat-body-2

--- a/angular/_typography.scss
+++ b/angular/_typography.scss
@@ -20,6 +20,10 @@
         margin-bottom: 0;
     }
 
+    .mat-body-2 {
+        font-weight: 600;
+    }
+
     .mat-overline {
         font-size: 0.75rem;
         font-weight: 600;
