--- a/angular/mixins/input-field.scss
+++ b/angular/mixins/input-field.scss
@@ -47,7 +47,7 @@
         &.mat-form-field-appearance-legacy,
         &.mat-form-field-appearance-standard,
         &.mat-form-field-appearance-fill {
-            .mat-form-field-underline {
+            .mat-form-field-underline, .mat-form-field-underline::before {
                 background-color: map-deep-get($palette, underline, default);
             }
 
