User Menu IFI text color black[500]

--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -330,6 +330,9 @@
         }
         .pxb-info-list-item-content {
             color: map-get($pxb-gray, 500);
+            .mat-list-text {
+                color: map-get($pxb-black, 500);
+            }
         }
     }
 
