--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -56,7 +56,7 @@ $material-theme: mat-light-theme($material-theme-primary, $material-theme-accent
         (
             foreground: (
                 text: map-get($pxb-black, 500),
-                secondary-text: map-get($pxb-black, 200),
+                secondary-text: map-get($pxb-gray, 500),
                 hint-text: map-get($pxb-gray, 500),
                 base: map-get($pxb-darkBlack, 900),
                 divider: rgba(66, 78, 84, 0.12),
