Update icon and description colors for angular empty state component

--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -37,8 +37,11 @@
     $foreground: map-get($theme, foreground);
     .pxb-empty-state {
         color: map-get($foreground, text);
+        .pxb-empty-state-empty-icon-wrapper {
+            color: map-get($foreground, secondary-text);
+        }
         .pxb-empty-state-description {
-            color: map-get($primary, 500);
+            color: map-get($foreground, text);
         }
     }
 }
