--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -409,11 +409,11 @@
     /* PXB Empty State */
     .pxb-empty-state {
         .pxb-empty-state-empty-icon-wrapper {
-            color: map-get($pxb-black, 200);
+            color: map-get($foreground, secondary-text);
         }
 
         .pxb-empty-state-description {
-            color: map-get($accent, 200);
+            color: map-get($foreground, secondary-text);
         }
     }
 
