--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -383,7 +383,8 @@
     .pxb-drawer {
         background-color: map-get($pxb-darkBlack, 300);
 
-        .pxb-drawer-nav-item-active .pxb-info-list-item .mat-list-item-content {
+        .pxb-drawer-nav-item-active .pxb-info-list-item .mat-list-item-content,
+        .pxb-drawer-nav-item-active .pxb-info-list-item .pxb-info-list-item-icon-wrapper {
             color: map-get($primary, 200);
 
             .pxb-info-list-item-subtitle-wrapper {
