--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -321,6 +321,12 @@
         .pxb-drawer-nav-item-active-highlight {
             opacity: 0.05;
         }
+
+        .pxb-drawer-nav-item-active, /*NavRail item*/
+        .pxb-drawer-nav-item-active .pxb-info-list-item .mat-list-item-content, /*Normal NavItem*/
+        .pxb-drawer-nav-item-active .pxb-info-list-item .pxb-info-list-item-icon-wrapper {
+            color: map-get($primary, 500);
+        }
     }
 
     /*  Drawer Content */
