--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -131,9 +131,10 @@
         color: inherit;
         background-color: inherit;
     }
-    .pxb-user-menu-overlay {
+    .pxb-user-menu-overlay, .pxb-user-menu-bottomsheet {
         .pxb-drawer-header-content.mat-toolbar-single-row.mat-toolbar {
             background-color: unset;
+            color: unset;
         }
     }
 }
