Make it prettier

--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -131,7 +131,8 @@
         color: inherit;
         background-color: inherit;
     }
-    .pxb-user-menu-overlay, .pxb-user-menu-bottomsheet {
+    .pxb-user-menu-overlay,
+    .pxb-user-menu-bottomsheet {
         .pxb-drawer-header-content.mat-toolbar-single-row.mat-toolbar {
             background-color: unset;
             color: unset;
