Use primary color in drawer header, use black[500] in light theme drawer icon

--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -107,7 +107,9 @@
         .pxb-drawer-nav-group .mat-list-base {
             color: map-get($foreground, text);
         }
-
+        .pxb-drawer-header-content.mat-toolbar {
+            background-color: map-get($primary, 500);
+        }
         .pxb-drawer-nav-item-active-highlight {
             background-color: map-get($primary, 500);
         }
