--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -327,6 +327,9 @@
         .pxb-drawer-nav-item-active .pxb-info-list-item .pxb-info-list-item-icon-wrapper {
             color: map-get($primary, 500);
         }
+        .pxb-info-list-item .mat-list-item-content .mat-list-icon {
+            color: map-get($foreground, text);
+        }
     }
 
     /*  Drawer Content */
